<resources>
    <string name="app_name">Discover Music</string>

    <!-- permission handler -->
    <string name="ok_button">Retry it</string>
    <string name="cancel_button">Cancel</string>
    <string name="location_permission_title">Access fine location permission</string>
    <string name="location_permission_message">This permission let the application get your precise current location</string>

    <!-- DISCOVER -->
    <string name="discover">Discover</string>
    <string name="arousal">Arousal</string>
    <string name="valence">Valence</string>
    <string name="energic">Energic</string>
    <string name="calm">Calm</string>
    <string name="dark">Dark</string>
    <string name="positive">Positive</string>
    
    <string name="year_before_50">&lt;&lt;</string>
    <string name="year_50">50</string>
    <string name="year_60">60</string>
    <string name="year_70">70</string>
    <string name="year_80">80</string>
    <string name="year_90">90</string>
    <string name="year_00">00</string>
    <string name="year_10">10</string>

    <string name="genre_rock">Rock</string>
    <string name="genre_pop">Pop</string>
    <string name="genre_folk">Folk</string>
    <string name="genre_electro">Electro</string>
    <string name="genre_r_b">R &amp; B</string>
    <string name="genre_hip_hop">Hip Hop</string>
    <string name="genre_vocal_pop">Vocal Pop</string>
    <string name="genre_soundtrack">Soundtrack</string>
    <string name="genre_classical">Classical</string>
    <string name="genre_latin">Latin</string>
    <string name="genre_world">World</string>
    <string name="genre_reggae">Reggae</string>
    <string name="genre_blues">Blues</string>
    <string name="genre_jazz">Jazz</string>
    <string name="genre_country">Country</string>
    <string name="genre_metal">Metal</string>
    <string name="genre_all">All genres</string>
    <string name="genre_none">No genre</string>

    <string name="decade">Decade</string>
    <string name="genre">Genre</string>
    <string name="search">Search</string>

    <string name="service_genre_rock">rock</string>
    <string name="service_genre_pop">pop</string>
    <string name="service_genre_folk">folk</string>
    <string name="service_genre_electro">electro</string>
    <string name="service_genre_r_b">randb</string>
    <string name="service_genre_hip_hop">hip Hop</string>
    <string name="service_genre_vocal_pop">vocal pop</string>
    <string name="service_genre_soundtrack">soundtrack</string>
    <string name="service_genre_classical">classical</string>
    <string name="service_genre_latin">latin</string>
    <string name="service_genre_world">world</string>
    <string name="service_genre_reggae">reggae</string>
    <string name="service_genre_blues">blues</string>
    <string name="service_genre_jazz">jazz</string>
    <string name="service_genre_country">country</string>
    <string name="service_genre_metal">metal</string>

    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="favorites">Favorites</string>

    <!-- SETTINGS -->
    <string name="settings_popularity">Popularity (range between 0=discover and 100=hit):</string>
    <string name="settings_listener_country">Country</string>
    <string name="settings_use_my_current_location">Use my current location</string>
    <string name="settings_results_number">Result\'s number</string>
    <string name="settings_save">Save changes</string>

    <!-- ABOUT -->
    <string name="version">Version 1.0</string>
    <string name="powered_by">Powered by</string>
    <string name="musicovery">Musicovery</string>
    <string name="chartlyrics">Chartlyrics</string>
    <string name="udacity">Udacity</string>
    <string name="year">July 2016</string>
    <string name="rights_reserved">All rights reserved</string>

    <!-- TRACK -->
    <string name="track">Track</string>
    <string name="playlist">Playlist</string>
    <string name="playlist_by_artist">Playlist by artist</string>
    <string name="playlist_by_track">Playlist by track</string>
    <string name="add_favorites">Add to favorites</string>
    <string name="remove_favorites">Remove from favorites</string>
    <string name="share">Share track</string>
    <string name="track_saved">Track saved as favorite</string>
    <string name="track_removed">Track removed from favorites</string>
    <string name="no_lyrics">No lyric available</string>
    <string name="no_favorites">No favorites at the moment</string>
    <string name="no_results">No results. Change your personal settings and/or search\'s parameters and try it again</string>

    <!-- DIALOGS -->
    <string name="ok">Ok</string>
    <string name="connectivity_error">Connectivity error</string>
    <string name="check_connectivity">Verify you are connected to the network and try it again</string>

    <string name="location_error">Location error</string>
    <string name="check_location">Verify your location service is enabled</string>

    <!-- WIDGET -->
    <string name="favs">favs</string>

</resources>
