<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="5dp">

        <TextView
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/title_text"/>

        <TextView
            android:text="@string/version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            style="@style/footer_text"/>

        <TextView
            android:text="@string/powered_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20sp"
            style="@style/subtitle_text"/>

        <TextView
            android:text="@string/musicovery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            style="@style/body_text"/>

        <TextView
            android:text="@string/chartlyrics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            style="@style/body_text"/>

        <TextView
            android:text="@string/udacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            style="@style/body_text"/>

        <TextView
            android:text="@string/year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            style="@style/footer_text"/>

        <TextView
            android:text="@string/rights_reserved"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            style="@style/footer_text"/>

    </LinearLayout>
</RelativeLayout>